kubernetes/apps/actual-budget/actual-budget/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: actual-budget
spec:
  hostnames: ["budget.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: actual-budget
          port: 5006
